@@ -1,6 +1,8 @@
 CHANGES
 
 Trunk
+	Output error when translating entire compound document (without extracting or specifying nested unit).
+
 	Fix misidentification of call as macro with starting '&' operator.
 
 	Put in full handling of Java interfaces.
